--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="https://github.com/Yasin-Horani/"><i class='bx bxl-github'></i></a>
                 <a href="#"><i class='bx bxl-instagram'></i></a>
             </div>
-            <a href="cv/Yasin Horani CV_.pdf" class="cv-btn">Download CV</a>
+            <a href="img/Yasin Horani CV 2025.pdf" class="cv-btn">Download CV</a>
         </div>
         <div class="home-img">
             <img src="img/Yasin.jpg" alt="yasin">
