update the text in my protfolio

--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
             <h3>Hello, It's Me</h3>
             <h1>Yasin Horani</h1>
             <h3>I'm a <span class="multipule-text"></span></h3>
-            <p>Social, ambitious and eager to learn. Enthusiastic software developer with a passion for
-                application and web development. Experienced in various programming languages, including Python, PHP,
-                SQL
-                and jQuery. Strong motivation to continuously grow and develop new skills.</p>
+            <p>Sociaal, communicatief, ambitieus en leergierig. Enthousiaste junior softwareontwikkelaar met een passie
+                voor applicatie- en webontwikkeling. Ervaren in diverse programmeertalen, sterke motivatie om
+                voortdurend te groeien en nieuwe vaardigheden te ontwikkelen.</p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/yasin-horani-01a029228/"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://github.com/Yasin-Horani/"><i class='bx bxl-github'></i></a>
@@ -58,12 +57,19 @@
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Software Engineer!</h3>
-            <p>I am a Software Engineering student at The Hague University of Applied Sciences, where I attend two
-                evenings per week
-                week completely devoted to my studies. Actively involved in various projects, I have consistent results
-                achieved success and excellent grades in Python, PBMN and SQL. My average grade is
-                9.</p>
-            <a href="#" class="about-btn">Read More</a>
+            <p>Als gepassioneerde softwareontwikkelaar ben ik constant bezig met het verbeteren van applicaties en het
+                creëren van nieuwe projecten. Mijn reis in de wereld van programmeren begon op 15-jarige leeftijd met
+                Delphi, Visual Basic, en SQL. Na het afronden van mijn opleiding Softwareontwikkelaar niveau 4 aan
+                MBO Rijnland heb ik mijn vaardigheden verder ontwikkeld door stages, cursussen op platforms zoals Udemy
+                en LinkedIn Learning en projecten in Laravel en Java.
+
+                Mijn enthousiasme voor programmeren heeft me aangespoord om een deeltijdopleiding Software Engineering
+                te volgen, naast mijn werk in een groot bedrijf. Deze combinatie van werk en studie heeft mijn passie
+                versterkt en mijn vaardigheden in Python, PHP, jQuery, SQL, Java en OOP verder ontwikkeld.
+
+                Ik ben gemotiveerd om voortdurend te groeien en nieuwe uitdagingen aan te gaan. Buiten mijn werk en
+                studie geniet ik van sporten, lezen en natuurlijk programmeren.</p>
+            <a href="https://www.linkedin.com/in/yasin-horani-01a029228/" class="about-btn">Read More</a>
         </div>
     </section>
     <!-- services section  -->
@@ -73,7 +79,7 @@
             <div class="services-box">
                 <i class='bx bx-code-alt'></i>
                 <h3>Web Development</h3>
-                <p>Build responsive websites using HTML5, CSS3, JavaScript, vue.js, jQuery, php, MySQL etc.</p>
+                <p>Build responsive websites using HTML5, CSS3, JavaScript, React, Express.js, php, MySQL etc.</p>
                 <a href="#" class="services-btn">Read More</a>
             </div>
 
@@ -88,6 +94,18 @@
                 <i class='bx bx-data'></i>
                 <h3>Database Design</h3>
                 <p>Design a project database with ERD for effective visualization and organization.</p>
+                <a href="#" class="services-btn">Read More</a>
+            </div>
+            <div class="services-box">
+                <i class='bx bxl-spring-boot'></i>
+                <h3>API Design</h3>
+                <p>Create APIs using Java and Spring Boot, test them, and generate Swagger documentation.</p>
+                <a href="#" class="services-btn">Read More</a>
+            </div>
+            <div class="services-box">
+                <i class='bx bxl-android' ></i>
+                <h3>Android</h3>
+                <p>Design and build Android apps with seamless integration to external RESTful APIs using Retrofit.</p>                
                 <a href="#" class="services-btn">Read More</a>
             </div>
         </div>
@@ -124,7 +142,7 @@
     <!-- typed js -->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <!-- custom js -->
-    
+
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
     </script>
     <script src="js/script.js"></script>
