Modify the index

--- a/index.html
+++ b/index.html
@@ -80,33 +80,33 @@
                 <i class='bx bx-code-alt'></i>
                 <h3>Web Development</h3>
                 <p>Build responsive websites using HTML5, CSS3, JavaScript, React, Express.js, php, MySQL etc.</p>
-                <a href="#" class="services-btn">Read More</a>
+                <a href="https://www.linkedin.com/in/yasin-horani-01a029228/" class="services-btn">Read More</a>
             </div>
 
             <div class="services-box">
                 <i class='bx bxl-python'></i>
                 <h3>Disktop Application</h3>
                 <p>Develop a desktop application using Python, Tkinter, and GUI libraries.</p>
-                <a href="#" class="services-btn">Read More</a>
+                <a href="https://www.linkedin.com/in/yasin-horani-01a029228/" class="services-btn">Read More</a>
             </div>
 
             <div class="services-box">
                 <i class='bx bx-data'></i>
                 <h3>Database Design</h3>
                 <p>Design a project database with ERD for effective visualization and organization.</p>
-                <a href="#" class="services-btn">Read More</a>
+                <a href="https://www.linkedin.com/in/yasin-horani-01a029228/" class="services-btn">Read More</a>
             </div>
             <div class="services-box">
                 <i class='bx bxl-spring-boot'></i>
                 <h3>API Design</h3>
                 <p>Create APIs using Java and Spring Boot, test them, and generate Swagger documentation.</p>
-                <a href="#" class="services-btn">Read More</a>
+                <a href="https://www.linkedin.com/in/yasin-horani-01a029228/" class="services-btn">Read More</a>
             </div>
             <div class="services-box">
                 <i class='bx bxl-android' ></i>
                 <h3>Android</h3>
                 <p>Design and build Android apps with seamless integration to external RESTful APIs using Retrofit.</p>                
-                <a href="#" class="services-btn">Read More</a>
+                <a href="https://www.linkedin.com/in/yasin-horani-01a029228/" class="services-btn">Read More</a>
             </div>
         </div>
     </section>
@@ -119,8 +119,8 @@
                 <input type="email" id="email" name="email" placeholder="Email Address" required>
             </div>
             <div class="input-box">
-                <input type="text" id="mobileNumber" name="mobileNumber" placeholder="Mobile Number">
-                <input type="text" id="subject" name="subject" placeholder="Subject">
+                <input type="number" id="mobileNumber" name="mobileNumber" placeholder="Mobile Number" required>
+                <input type="text" id="subject" name="subject" placeholder="Subject" required>
             </div>
             <textarea id="message" name="message" cols="30" rows="10" placeholder="Your Message" required></textarea>
             <button type="submit" value="Send Message" class="send-btn">Send Message</button>
