Modify the text

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
             <h3>Hello, It's Me</h3>
             <h1>Yasin Horani</h1>
             <h3>I'm a <span class="multipule-text"></span></h3>
-            <p>Sociaal, communicatief, ambitieus en leergierig. Enthousiaste junior softwareontwikkelaar met een passie
-                voor applicatie- en webontwikkeling. Ervaren in diverse programmeertalen, sterke motivatie om
-                voortdurend te groeien en nieuwe vaardigheden te ontwikkelen.</p>
+            <p>Sociaal, communicatief, ambitieus en leergierig. Ik ben een enthousiaste softwareontwikkelaar met een
+                passie voor applicatie- en webontwikkeling. Met ervaring in diverse programmeertalen en een sterke drive
+                om mezelf continu te verbeteren, streef ik ernaar om voortdurend te groeien en nieuwe vaardigheden te
+                ontwikkelen.</p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/yasin-horani-01a029228/"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://github.com/Yasin-Horani/"><i class='bx bxl-github'></i></a>
@@ -57,18 +58,21 @@
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Software Engineer!</h3>
-            <p>Als gepassioneerde softwareontwikkelaar ben ik constant bezig met het verbeteren van applicaties en het
-                creëren van nieuwe projecten. Mijn reis in de wereld van programmeren begon op 15-jarige leeftijd met
-                Delphi, Visual Basic, en SQL. Na het afronden van mijn opleiding Softwareontwikkelaar niveau 4 aan
-                MBO Rijnland heb ik mijn vaardigheden verder ontwikkeld door stages, cursussen op platforms zoals Udemy
-                en LinkedIn Learning en projecten in Laravel en Java.
+            <p>Als gepassioneerde softwareontwikkelaar ben ik voortdurend bezig met het verbeteren van bestaande
+                applicaties en het ontwikkelen van nieuwe projecten. Mijn reis in de wereld van programmeren begon op
+                vijftienjarige leeftijd, met talen als Delphi, Visual Basic en SQL.
 
-                Mijn enthousiasme voor programmeren heeft me aangespoord om een deeltijdopleiding Software Engineering
-                te volgen, naast mijn werk in een groot bedrijf. Deze combinatie van werk en studie heeft mijn passie
-                versterkt en mijn vaardigheden in Python, PHP, jQuery, SQL, Java en OOP verder ontwikkeld.
+                Na het behalen van mijn diploma Softwareontwikkeling op niveau 4 aan MBO Rijnland, heb ik mijn
+                vaardigheden verder verdiept via stages, cursussen op platforms zoals Udemy en LinkedIn Learning, en
+                door te werken aan projecten in onder andere Laravel en Java.
 
-                Ik ben gemotiveerd om voortdurend te groeien en nieuwe uitdagingen aan te gaan. Buiten mijn werk en
-                studie geniet ik van sporten, lezen en natuurlijk programmeren.</p>
+                Mijn enthousiasme voor programmeren heeft ertoe geleid dat ik ben gestart met een deeltijdopleiding
+                Software Engineering, die ik combineer met mijn werk bij een groot bedrijf. Deze combinatie van studie
+                en praktijkervaring heeft mijn passie alleen maar versterkt, en mijn kennis van onder andere Python,
+                PHP, jQuery, SQL, Java en objectgeoriënteerd programmeren verder uitgebreid.
+
+                Ik ben gemotiveerd om mezelf continu te blijven ontwikkelen en nieuwe uitdagingen aan te gaan. In mijn
+                vrije tijd sport ik graag, lees ik veel, en besteed ik natuurlijk ook tijd aan programmeren.</p>
             <a href="https://www.linkedin.com/in/yasin-horani-01a029228/" class="about-btn">Read More</a>
         </div>
     </section>
@@ -103,9 +107,9 @@
                 <a href="https://www.linkedin.com/in/yasin-horani-01a029228/" class="services-btn">Read More</a>
             </div>
             <div class="services-box">
-                <i class='bx bxl-android' ></i>
+                <i class='bx bxl-android'></i>
                 <h3>Android</h3>
-                <p>Design and build Android apps with seamless integration to external RESTful APIs using Retrofit.</p>                
+                <p>Design and build Android apps with seamless integration to external RESTful APIs using Retrofit.</p>
                 <a href="https://www.linkedin.com/in/yasin-horani-01a029228/" class="services-btn">Read More</a>
             </div>
         </div>
