Modify text in index.html

--- a/index.html
+++ b/index.html
@@ -61,18 +61,15 @@
             <p>Als gepassioneerde softwareontwikkelaar ben ik voortdurend bezig met het verbeteren van bestaande
                 applicaties en het ontwikkelen van nieuwe projecten. Mijn reis in de wereld van programmeren begon op
                 vijftienjarige leeftijd, met talen als Delphi, Visual Basic en SQL.
-
                 Na het behalen van mijn diploma Softwareontwikkeling op niveau 4 aan MBO Rijnland, heb ik mijn
                 vaardigheden verder verdiept via stages, cursussen op platforms zoals Udemy en LinkedIn Learning, en
                 door te werken aan projecten in onder andere Laravel en Java.
-
                 Mijn enthousiasme voor programmeren heeft ertoe geleid dat ik ben gestart met een deeltijdopleiding
                 Software Engineering, die ik combineer met mijn werk bij een groot bedrijf. Deze combinatie van studie
                 en praktijkervaring heeft mijn passie alleen maar versterkt, en mijn kennis van onder andere Python,
                 PHP, jQuery, SQL, Java en objectgeoriënteerd programmeren verder uitgebreid.
-
                 Ik ben gemotiveerd om mezelf continu te blijven ontwikkelen en nieuwe uitdagingen aan te gaan. In mijn
-                vrije tijd sport ik graag, lees ik veel, en besteed ik natuurlijk ook tijd aan programmeren.</p>
+                vrije tijd sport ik graag, lees ik veel en besteed ik natuurlijk ook tijd aan programmeren.</p>
             <a href="https://www.linkedin.com/in/yasin-horani-01a029228/" class="about-btn">Read More</a>
         </div>
     </section>
