--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="My Portfolio">
     <meta name="keywords"
-        content="HTML, CSS, JavaScript, sql,  php, web development, portfolio, Yasin Horani, Software Engineering, Application, developer">
+        content="HTML, CSS, JavaScript, sql, php, web development, portfolio, Yasin Horani, Software Engineering, Application, developer, 
+        programmer, software engineer, React, Express.js, Java, Spring Boot, Android, Python, Tkinter">
     <meta name="author" content="Yasin Horani">
     <title>Yasin Portfolio</title>
     <!-- box icon -->
@@ -34,7 +35,7 @@
             <h3>Hello, It's Me</h3>
             <h1>Yasin Horani</h1>
             <h3>I'm a <span class="multipule-text"></span></h3>
-            <p>Sociaal, communicatief, ambitieus en leergierig. Ik ben een enthousiaste softwareontwikkelaar met een
+            <p>Sociaal, communicatief, ambitieus en leergierig. Ik ben een enthousiaste software engineer met een
                 passie voor applicatie- en webontwikkeling. Met ervaring in diverse programmeertalen en een sterke drive
                 om mezelf continu te verbeteren, streef ik ernaar om voortdurend te groeien en nieuwe vaardigheden te
                 ontwikkelen.</p>
@@ -86,7 +87,7 @@
 
             <div class="services-box">
                 <i class='bx bxl-python'></i>
-                <h3>Disktop Application</h3>
+                <h3>Desktop Application</h3>
                 <p>Develop a desktop application using Python, Tkinter, and GUI libraries.</p>
                 <a href="https://www.linkedin.com/in/yasin-horani-01a029228/" class="services-btn">Read More</a>
             </div>
