--- a/index.html
+++ b/index.html
@@ -59,18 +59,7 @@
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Software Engineer!</h3>
-            <p>Als gepassioneerde softwareontwikkelaar ben ik voortdurend bezig met het verbeteren van bestaande
-                applicaties en het ontwikkelen van nieuwe projecten. Mijn reis in de wereld van programmeren begon op
-                vijftienjarige leeftijd, met talen als Delphi, Visual Basic en SQL.
-                Na het behalen van mijn diploma Softwareontwikkeling op niveau 4 aan MBO Rijnland, heb ik mijn
-                vaardigheden verder verdiept via stages, cursussen op platforms zoals Udemy en LinkedIn Learning, en
-                door te werken aan projecten in onder andere Laravel en Java.
-                Mijn enthousiasme voor programmeren heeft ertoe geleid dat ik ben gestart met een deeltijdopleiding
-                Software Engineering, die ik combineer met mijn werk bij een groot bedrijf. Deze combinatie van studie
-                en praktijkervaring heeft mijn passie alleen maar versterkt, en mijn kennis van onder andere Python,
-                PHP, jQuery, SQL, Java en objectgeoriënteerd programmeren verder uitgebreid.
-                Ik ben gemotiveerd om mezelf continu te blijven ontwikkelen en nieuwe uitdagingen aan te gaan. In mijn
-                vrije tijd sport ik graag, lees ik veel en besteed ik natuurlijk ook tijd aan programmeren.</p>
+            <p>Als gepassioneerde software engineer ben ik altijd bezig met het bouwen van slimme schaalbare oplossingen en het verdiepen van mijn technische kennis. Mijn programmeerreis begon al op mijn 15e, met talen zoals Pascal Delphi en Visual Basic. Inmiddels ben ik gegroeid naar een professionele software engineer met ervaring in Java, Spring boot, MySQL, RESTful API's en meer. Ik combineer mijn deeltijdopleiding Software Engineering met werkervaring bij bedrijven zoals Talksome en One Flora Group, waar ik werkte aan zowel backend- als full-stack oplossingen. Mijn kracht ligt in het schrijven van clean code, het bouwen van API’s en het samenwerken binnen Agile-teams. Naast het programmeren ben ik continu bezig met leren via cursussen, boeken en eigen projecten. Ik krijg energie van complexe uitdagingen, teamwork en technologie die impact maakt.</p>
             <a href="https://www.linkedin.com/in/yasin-horani-01a029228/" class="about-btn">Read More</a>
         </div>
     </section>
@@ -82,14 +71,14 @@
                 <i class='bx bx-code-alt'></i>
                 <h3>Web Development</h3>
                 <p>Build responsive websites using HTML5, CSS3, JavaScript, React, Express.js, php, MySQL etc.</p>
-                <a href="https://www.linkedin.com/in/yasin-horani-01a029228/" class="services-btn">Read More</a>
+                <a href="https://github.com/Yasin-Horani/Back-end-game-collection" class="services-btn">Read More</a>
             </div>
 
             <div class="services-box">
                 <i class='bx bxl-python'></i>
                 <h3>Desktop Application</h3>
                 <p>Develop a desktop application using Python, Tkinter, and GUI libraries.</p>
-                <a href="https://www.linkedin.com/in/yasin-horani-01a029228/" class="services-btn">Read More</a>
+                <a href="https://github.com/Yasin-Horani/Figlest" class="services-btn">Read More</a>
             </div>
 
             <div class="services-box">
@@ -102,13 +91,13 @@
                 <i class='bx bxl-spring-boot'></i>
                 <h3>API Design</h3>
                 <p>Create APIs using Java and Spring Boot, test them, and generate Swagger documentation.</p>
-                <a href="https://www.linkedin.com/in/yasin-horani-01a029228/" class="services-btn">Read More</a>
+                <a href="https://github.com/Yasin-Horani/erp-system" class="services-btn">Read More</a>
             </div>
             <div class="services-box">
                 <i class='bx bxl-android'></i>
                 <h3>Android</h3>
                 <p>Design and build Android apps with seamless integration to external RESTful APIs using Retrofit.</p>
-                <a href="https://www.linkedin.com/in/yasin-horani-01a029228/" class="services-btn">Read More</a>
+                <a href="https://github.com/Yasin-Horani/Solis/tree/main/Client" class="services-btn">Read More</a>
             </div>
         </div>
     </section>
