--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="services-box">
                 <i class='bx bxl-python'></i>
                 <h3>Desktop Application</h3>
-                <p>Develop a desktop application using Python, Tkinter, and GUI libraries.</p>
+                <p>Develop a desktop application using Python, Tkinter, friendly interface design and GUI libraries.</p>
                 <a href="https://github.com/Yasin-Horani/Figlest" class="services-btn">Read More</a>
             </div>
 
