--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h3>Hello, It's Me</h3>
             <h1>Yasin Horani</h1>
             <h3>I'm a <span class="multipule-text"></span></h3>
-            <p>Sociaal, communicatief, ambitieus en leergierig. Enthousiaste software engineer met een passie voor applicatie- en webontwikkeling. Ervaren in het bouwen van API’s en het schrijven van clean, onderhoudbare code. Werkt effectief binnen Agile-teams en is vertrouwd met diverse programmeertalen. Gedreven om continu te groeien, nieuwe technologieën te ontdekken en zijn vaardigheden verder te ontwikkelen.</p>
+            <p>Sociaal, communicatief, ambitieus en leergierig. Enthousiaste software engineer met een passie voor applicatie en webontwikkeling. Ervaren in het bouwen van API’s en het schrijven van clean, onderhoudbare code. Werkt effectief binnen Agile-teams en is vertrouwd met diverse programmeertalen. Gedreven om continu te groeien, nieuwe technologieën te ontdekken en zijn vaardigheden verder te ontwikkelen.</p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/yasin-horani-01a029228/"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://github.com/Yasin-Horani/"><i class='bx bxl-github'></i></a>
