--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
             <h3>Hello, It's Me</h3>
             <h1>Yasin Horani</h1>
             <h3>I'm a <span class="multipule-text"></span></h3>
-            <p>Sociaal, communicatief, ambitieus en leergierig. Enthousiaste software engineer met een passie voor applicatie en webontwikkeling. Ervaren in het bouwen van API’s en het schrijven van clean, onderhoudbare code. Werkt effectief binnen Agile-teams en is vertrouwd met diverse programmeertalen. Gedreven om continu te groeien, nieuwe technologieën te ontdekken en zijn vaardigheden verder te ontwikkelen.</p>
+            <p>Social, communicative, ambitious and eager to learn. 
+                Enthusiastic software engineer with a passion for application and web development. 
+                Experienced in building APIs and writing clean, maintainable code. 
+                Works effectively within Agile teams and is familiar with various programming languages. 
+                Driven to continuously grow, explore new technologies, and further develop his skills.</p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/yasin-horani-01a029228/"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://github.com/Yasin-Horani/"><i class='bx bxl-github'></i></a>
@@ -56,7 +60,14 @@
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Software Engineer!</h3>
-            <p>Als gepassioneerde software engineer ben ik altijd bezig met het bouwen van slimme schaalbare oplossingen en het verdiepen van mijn technische kennis. Mijn programmeerreis begon al op mijn 15e, met talen zoals Pascal Delphi en Visual Basic. Inmiddels ben ik gegroeid naar een professionele software engineer met ervaring in Java, Spring boot, MySQL, RESTful API's en meer. Ik combineer mijn deeltijdopleiding Software Engineering met werkervaring bij bedrijven zoals Talksome en One Flora Group, waar ik werkte aan zowel backend- als full-stack oplossingen. Mijn kracht ligt in het schrijven van clean code, het bouwen van API’s en het samenwerken binnen Agile-teams. Naast het programmeren ben ik continu bezig met leren via cursussen, boeken en eigen projecten. Ik krijg energie van complexe uitdagingen, teamwork en technologie die impact maakt.</p>
+            <p>As a passionate software engineer, I thrive on building smart scalable solutions and continuously expanding my technical expertise. 
+                My journey into programming began at 15 with Delphi and Visual Basic and has since evolved into a professional path in Java, Spring boot, MySQL, 
+                RESTful API's and beyond. While studying Software Engineering part-time, 
+                I’ve gained valuable industry experience at companies like Talksome and One Flora Group, working on both backend and full-stack projects. 
+                I specialize in writing clean, maintainable code, developing APIs, and collaborating in Agile teams. 
+                Outside of work, I’m always learning through courses, books and personal projects. 
+                I’m driven by technical challenges, 
+                creative solutions and the opportunity to build meaningful software.</p>
             <a href="https://www.linkedin.com/in/yasin-horani-01a029228/" class="about-btn">Read More</a>
         </div>
     </section>
