add image to head

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         content="HTML, CSS, JavaScript, sql, php, web development, portfolio, Yasin Horani, Software Engineering, Application, developer, 
         programmer, software engineer, React, Express.js, Java, Spring Boot, Android, Python, Tkinter">
     <meta name="author" content="Yasin Horani">
+    <link rel="icon" href="./img/logo.png" type="image/png" alt="Yasin Horani Logo">
     <title>Yasin Portfolio</title>
     <!-- box icon -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
